5/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-echo
spec:
  containers:
  - name: nginx 
    image: gihyodocker/nginx:latest 
    ports:
    - containerPort: 80 
  - name: echo
    image: gihyodocker/echo:latest
    ports:
    - containerPort: 8080
