5/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo 
spec:
#  type: NodePort
  selector:
    app: echo
#    release: summer
  ports:
    - name: http
      port: 80
